@@ -1,6 +1,8 @@
 package com.example.obspringbootrestdatajpa.controllers;
 
 import com.example.obspringbootrestdatajpa.entities.Book;
+import com.example.obspringbootrestdatajpa.repositories.BookRepository;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -9,11 +11,13 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.context.ApplicationContext;
 import org.springframework.http.*;
 
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.*;
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT )
@@ -23,15 +27,27 @@ class BookControllerTest {
     private RestTemplateBuilder restTemplateBuilder;
     @LocalServerPort
     private int port;
+    private static BookRepository bookRepository;
+    private
     /* otra manera equivalente
 	@Value("${local.server.port}")
 	private int port;
 	*/
+    @BeforeAll
+    static void beforeAll(@Autowired ApplicationContext context) {
+        Book book1 = new Book(null,"Homo deus", "Yuval Noah", 450, 29.99,LocalDate.of(2018,12,1),true);
+        Book book2 = new Book(null,"Homo sapiens", "Yuval Noah", 450, 19.99, LocalDate.of(2013,12,1),true);
+        //almacenar libro
+        bookRepository = context.getBean(BookRepository.class);
+        bookRepository.save(book1);
+        bookRepository.save(book2);
+    }
     @BeforeEach
     void setUp() {
         restTemplateBuilder = restTemplateBuilder.rootUri("http://localhost:"+port);
         testRestTemplate = new TestRestTemplate(restTemplateBuilder);
     }
+
     @DisplayName("'Hello World' en controladores Spring Rest...")
     @Test
     void hello() {
@@ -44,24 +60,30 @@ class BookControllerTest {
     void findAll() {
         ResponseEntity<Book[]> response = testRestTemplate.getForEntity("/api/books", Book[].class);
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        List books = Arrays.asList(response.getBody());
-
-
+        List<Book> books_response = Arrays.asList(Objects.requireNonNull(response.getBody()));
+        assertEquals(bookRepository.findAll(), books_response);
     }
     @Test
-    void findOne() {
-        ResponseEntity<Book> response = testRestTemplate.getForEntity("/api/book/1",Book.class);
-
+    void findANotExistingBook() {
+        ResponseEntity<Book> response = testRestTemplate.getForEntity("/api/book/9999",Book.class);
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
+    @Test
+    void findOneBook() {
+        Long id = 1L;
+        ResponseEntity<Book> response = testRestTemplate.getForEntity("/api/book/"+id.toString(),Book.class);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(bookRepository.findById(id).orElseThrow(),response.getBody());
     }
 
     @Test
     void create() {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
         String json = """
                 {
+                    
                     "title": "Libro nuevo",
                     "author": "Autor Nuevo",
                     "pages": 550,
@@ -74,7 +96,7 @@ class BookControllerTest {
         ResponseEntity<Book> response = testRestTemplate.exchange("/api/books", HttpMethod.POST, request, Book.class);
         assertEquals(HttpStatus.OK, response.getStatusCode());
         Book book_created = response.getBody();
-        Book book_to_verify = new Book(1L, "Libro nuevo", "Autor Nuevo", 550, 49.99, LocalDate.of(2022, 12, 22), true);
+        Book book_to_verify = new Book(3L, "Libro nuevo", "Autor Nuevo", 550, 49.99, LocalDate.of(2022, 12, 22), true);
         assertEquals(book_to_verify, book_created);
     }
 }
